--- a/index.html
+++ b/index.html
@@ -16,13 +16,26 @@
         <!-- SIDEBAR -->
         <div class="sidebar">
             <img class="logo" src="img/logo.svg" alt="">
-            <div class="menu">
+            <!-- MENU SIDEBAR -->
+            <div class="menu-sidebar">
                 <div class="cont-link-menu">
                     <i class="fa-solid fa-house"></i>
-                    <p class="link-menu"></p>
+                    <p class="link-menu">Home</p>
+                </div>
+                <div class="cont-link-menu">
+                    <i class="fa-solid fa-magnifying-glass"></i>
+                    <p class="link-menu">Cerca</p>
+                </div>
+                <div class="cont-link-menu">
+                    <i class="fa-solid fa-lines-leaning"></i>
+                    <p class="link-menu">Libreria</p>
                 </div>
             </div>
-            
+
+            <!-- PLAYLIST SIDEBAR -->
+            <div class="playlist-sidebar">
+                
+            </div>
         </div>
 
         <!-- CONTENUTO -->
